{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Cubic",
            "id": "b0bc01ae-27f7-40b3-8f4b-f7d8421db9dd",
            "actions": [
                {
                    "name": "KeyboardArrow",
                    "type": "Value",
                    "id": "0816c746-d3f8-4b91-9a56-2e4dea4b5070",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "KeyboardWASD",
                    "type": "Value",
                    "id": "1a1eb9c6-0826-4a45-8d39-7c4291c824f3",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "bb4fc578-2d86-4bdf-8425-bd44edb42a9c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerPress",
                    "type": "Button",
                    "id": "b602f47a-75bc-4cf2-a8e6-7b1f257f6e11",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PressSpeedReduce",
                    "type": "Button",
                    "id": "af889383-7be0-48cc-998e-c4e4a521498c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "3D Vector",
                    "id": "c607644f-3470-408e-ba79-60eff5d94623",
                    "path": "3DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardArrow",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "db7bd348-53d9-40a8-af16-15e91378d8d3",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "KeyboardArrow",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Forward",
                    "id": "50ba34ef-4487-4029-8609-2ea202066b12",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "KeyboardArrow",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Backward",
                    "id": "2e06a90e-0630-4e54-b379-c9011f5e8afd",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "KeyboardArrow",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f00c6f80-e164-4aed-b724-7788e67c3da0",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse;Touchscreen",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c38e8ca-3b3c-4bb2-a18a-7d5aebe7e54b",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse;Touchscreen",
                    "action": "PointerPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d9ab85d-bb8c-4166-98b9-82f4501e5264",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "PressSpeedReduce",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d9bbda7-93dc-4a09-a986-e273d8353ea5",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse;Touchscreen",
                    "action": "PressSpeedReduce",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "3D Vector",
                    "id": "334472b9-c835-4489-ad6b-b5056043e404",
                    "path": "3DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardWASD",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "bbf5428a-7990-43c1-a2ea-6e9366573d4f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "KeyboardWASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Forward",
                    "id": "1c6db332-3aac-4086-9ce9-742046a1f56c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "KeyboardWASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Backward",
                    "id": "b02f4b7c-0e1a-459c-9b58-771b6056d694",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "KeyboardWASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse",
            "bindingGroup": "Mouse",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touchscreen",
            "bindingGroup": "Touchscreen",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}